Bug 321234 - I can't rename several files (with different extensions) with the same name
Summary: I can't rename several files (with different extensions) with the same name
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-16 17:03 UTC by J.A. Moray
Modified: 2013-06-20 17:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J.A. Moray 2013-06-16 17:03:56 UTC
I think it may be related to this: https://bugs.kde.org/show_bug.cgi?id=318942

I used to rename video file and their subtitle files with the same name (they have different extensions, so there wouldn't be a problem). I select both files, press F2, write a name (without the character #) and before I could do this, but now the Rename button is disabled unless I write the character #. So, now I have to rename each file separately, wich is tedious...

Reproducible: Always
Comment 1 Frank Reininghaus 2013-06-17 07:35:59 UTC
Thanks for the bug report.

Actually, the "rename multiple files" feature was always intended to be used with one or more '#', which would be replaced by numbers. The fact that renaming was enabled if there were no '#' at all was an accident, which could also lead to problems if there were multiple selected files with the same extension.

However, I see that this accidental feature can be useful in your use case, and I think that it won't hurt anyone if we also enable the button if all extensions are different, and there is no '#' in the string.
Comment 2 J.A. Moray 2013-06-17 15:30:10 UTC
It should be great if you implement this feature. To me it's very useful and, as you said, it doesn't hurt anyone.
Comment 3 Frank Reininghaus 2013-06-20 17:43:43 UTC
Git commit 6f2e1403480bf5617b0cba92d6cbbbb4f62aec2c by Frank Reininghaus.
Committed on 20/06/2013 at 17:37.
Pushed by freininghaus into branch 'KDE/4.10'.

Allow renaming multiple files without number if extensions are different

Normally, we only allow renaming multiple files if the new file name
contains a contiguous sequence of '#' placeholders, which are then
replaced by numbers.

However, if all extensions are different, we can also rename the files
without such a placeholder because the original extension is preserved
when renaming.

This had been possible some time ago already. That this "accidental
feature" was lost was a side effect of the fix for bug 318942.
FIXED-IN: 4.10.5
REVIEW: 111079

M  +22   -4    dolphin/src/views/renamedialog.cpp
M  +1    -0    dolphin/src/views/renamedialog.h

http://commits.kde.org/kde-baseapps/6f2e1403480bf5617b0cba92d6cbbbb4f62aec2c